--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,51 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+
+  /* ===============================
+     Bulldozer Cursor (Native)
+     Put files in: /public/cursors/
+     - bulldozer-up.svg / bulldozer-up-dark.svg
+     - bulldozer-down.svg / bulldozer-down-dark.svg
+     =============================== */
+
+  /* Light mode cursors */
+  html,
+  body,
+  * {
+    cursor: url("/cursors/bulldozer-up.svg") 16 16, auto !important;
+  }
+
+  /* Interactive elements on hover = blade DOWN (light mode) */
+  a:hover,
+  button:hover,
+  [role="button"]:hover,
+  [data-cursor="pointer"]:hover,
+  a *,
+  button *,
+  [role="button"] *,
+  [data-cursor="pointer"] * {
+    cursor: url("/cursors/bulldozer-down.svg") 16 16, pointer !important;
+  }
+
+  /* Dark mode cursors */
+  .dark html,
+  .dark body,
+  .dark * {
+    cursor: url("/cursors/bulldozer-up-dark.svg") 16 16, auto !important;
+  }
+
+  /* Interactive elements on hover = blade DOWN (dark mode) */
+  .dark a:hover,
+  .dark button:hover,
+  .dark [role="button"]:hover,
+  .dark [data-cursor="pointer"]:hover,
+  .dark a *,
+  .dark button *,
+  .dark [role="button"] *,
+  .dark [data-cursor="pointer"] * {
+    cursor: url("/cursors/bulldozer-down-dark.svg") 16 16, pointer !important;
+  }
 }
 
 /* Component styles - reusable UI elements */
@@ -24,25 +69,24 @@
     font-weight: 500;
     font-family: inherit;
     background-color: #1a1a1a;
-    cursor: pointer;
     transition: border-color 0.25s;
   }
-  
+
   button:hover {
     border-color: #646cff;
   }
-  
+
   button:focus,
   button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
   }
-  
+
   a {
     font-weight: 500;
     color: #646cff;
     text-decoration: inherit;
   }
-  
+
   a:hover {
     color: #535bf2;
   }
